modulo-04-gestion-apps-redes/ejercicios/redes/09-networkpolicy/manifests/solution/client-denied-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-denied
spec:
  containers:
  - name: client
    image: curlimages/curl
    command: ["sleep","3600"]
