modulo-04-gestion-apps-redes/ejercicios/redes/09-networkpolicy/manifests/solution/np-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: np-server
  template:
    metadata:
      labels:
        app: np-server
    spec:
      containers:
      - name: web
        image: nginx:1.25-alpine
        ports:
        - containerPort: 80
