modulo-04-gestion-apps-redes/ejercicios/redes/09-networkpolicy/manifests/solution/np-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-server
spec:
  selector:
    app: np-server
  ports:
  - port: 80
    targetPort: 80
