modulo-04-gestion-apps-redes/ejercicios/redes/09-networkpolicy/manifests/solution/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-labeled
spec:
  podSelector:
    matchLabels:
      app: np-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
    ports:
    - protocol: TCP
      port: 80
